--- a/version-six/pom.xml
+++ b/version-six/pom.xml
@@ -16,17 +16,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${elastic6.highlevel}</version>
@@ -66,6 +55,10 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <start-class>com.qcc.es.StartApplication</start-class>
+    </properties>
+
     <build>
         <plugins>
 
@@ -90,6 +83,6 @@
                 </configuration>
             </plugin>
         </plugins>
-
+        <finalName>DeleteBuildingData</finalName>
     </build>
 </project>
